{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 20,
  "lineage": "ab74363d-9125-c43a-dd92-9d86d20089bc",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "private-allow-ping",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2024-10-11T05:38:02.395-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/qwiklabs-gcp-02-04bd758986c7/global/firewalls/private-vpc-allow-ping",
            "log_config": [],
            "name": "private-vpc-allow-ping",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-02-04bd758986c7/global/networks/private-vpc",
            "priority": 1000,
            "project": "qwiklabs-gcp-02-04bd758986c7",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-02-04bd758986c7/global/firewalls/private-vpc-allow-ping",
            "source_ranges": [
              "10.1.1.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.private-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "private-allow-rdp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3389"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-10-11T05:38:02.408-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/qwiklabs-gcp-02-04bd758986c7/global/firewalls/private-vpc-allow-rdp",
            "log_config": [],
            "name": "private-vpc-allow-rdp",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-02-04bd758986c7/global/networks/private-vpc",
            "priority": 1000,
            "project": "qwiklabs-gcp-02-04bd758986c7",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-02-04bd758986c7/global/firewalls/private-vpc-allow-rdp",
            "source_ranges": [
              "10.1.1.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "allow-rdp"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.private-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "private-allow-sql",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "1433"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-10-11T05:38:02.501-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/qwiklabs-gcp-02-04bd758986c7/global/firewalls/private-vpc-allow-sql",
            "log_config": [],
            "name": "private-vpc-allow-sql",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-02-04bd758986c7/global/networks/private-vpc",
            "priority": 1000,
            "project": "qwiklabs-gcp-02-04bd758986c7",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-02-04bd758986c7/global/firewalls/private-vpc-allow-sql",
            "source_ranges": [
              "10.1.1.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "allow-sql"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.private-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "private-allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-10-11T05:38:13.516-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/qwiklabs-gcp-02-04bd758986c7/global/firewalls/private-vpc-allow-ssh",
            "log_config": [],
            "name": "private-vpc-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-02-04bd758986c7/global/networks/private-vpc",
            "priority": 1000,
            "project": "qwiklabs-gcp-02-04bd758986c7",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-02-04bd758986c7/global/firewalls/private-vpc-allow-ssh",
            "source_ranges": [
              "10.1.1.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "allow-ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.private-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "public-allow-ping",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2024-10-11T05:38:02.257-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/qwiklabs-gcp-02-04bd758986c7/global/firewalls/public-vpc-allow-ping",
            "log_config": [],
            "name": "public-vpc-allow-ping",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-02-04bd758986c7/global/networks/public-vpc",
            "priority": 1000,
            "project": "qwiklabs-gcp-02-04bd758986c7",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-02-04bd758986c7/global/firewalls/public-vpc-allow-ping",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.public-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "public-allow-rdp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3389"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-10-11T05:38:02.419-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/qwiklabs-gcp-02-04bd758986c7/global/firewalls/public-vpc-allow-rdp",
            "log_config": [],
            "name": "public-vpc-allow-rdp",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-02-04bd758986c7/global/networks/public-vpc",
            "priority": 1000,
            "project": "qwiklabs-gcp-02-04bd758986c7",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-02-04bd758986c7/global/firewalls/public-vpc-allow-rdp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "allow-rdp"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.public-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "public-allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-10-11T05:38:02.501-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/qwiklabs-gcp-02-04bd758986c7/global/firewalls/public-vpc-allow-ssh",
            "log_config": [],
            "name": "public-vpc-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-02-04bd758986c7/global/networks/public-vpc",
            "priority": 1000,
            "project": "qwiklabs-gcp-02-04bd758986c7",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-02-04bd758986c7/global/firewalls/public-vpc-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "allow-ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.public-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "private-test-server-linux",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20241009",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-02-04bd758986c7/zones/us-central1-c/disks/private-test-server-linux-be9e37d1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/qwiklabs-gcp-02-04bd758986c7/zones/us-central1-c/instances/private-test-server-linux-be9e37d1",
            "instance_id": "1502094574995415724",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "8sVlja6gEqc=",
            "metadata_startup_script": "sudo apt-get update;",
            "name": "private-test-server-linux-be9e37d1",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-02-04bd758986c7/global/networks/private-vpc",
                "network_ip": "10.2.2.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-02-04bd758986c7/regions/us-central1/subnetworks/private-subnet-1",
                "subnetwork_project": "qwiklabs-gcp-02-04bd758986c7"
              }
            ],
            "project": "qwiklabs-gcp-02-04bd758986c7",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-02-04bd758986c7/zones/us-central1-c/instances/private-test-server-linux-be9e37d1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-ssh"
            ],
            "tags_fingerprint": "SFX9LNAOdG8=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-central1-c"
          },
          "dependencies": [
            "google_compute_network.private-vpc",
            "google_compute_subnetwork.private-subnet_1",
            "random_id.instance_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "sql-client",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1604-xenial-v20200429",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-02-04bd758986c7/zones/us-central1-c/disks/sql-client-be9e37d1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/qwiklabs-gcp-02-04bd758986c7/zones/us-central1-c/instances/sql-client-be9e37d1",
            "instance_id": "2715715061395268268",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "8sVlja6gEqc=",
            "metadata_startup_script": "sudo apt-get update;",
            "name": "sql-client-be9e37d1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.45.132.158",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-02-04bd758986c7/global/networks/public-vpc",
                "network_ip": "10.1.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-02-04bd758986c7/regions/us-central1/subnetworks/public-subnet-1",
                "subnetwork_project": "qwiklabs-gcp-02-04bd758986c7"
              }
            ],
            "project": "qwiklabs-gcp-02-04bd758986c7",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-02-04bd758986c7/zones/us-central1-c/instances/sql-client-be9e37d1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-ssh"
            ],
            "tags_fingerprint": "SFX9LNAOdG8=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-central1-c"
          },
          "dependencies": [
            "google_compute_network.public-vpc",
            "google_compute_subnetwork.public-subnet_1",
            "random_id.instance_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "sql-server-windows",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/windows-sql-cloud/global/images/sql-2017-express-windows-2016-dc-v20200414",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 50,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-02-04bd758986c7/zones/us-central1-c/disks/sql-server-windows-be9e37d1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/qwiklabs-gcp-02-04bd758986c7/zones/us-central1-c/instances/sql-server-windows-be9e37d1",
            "instance_id": "1564082480768918189",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-standard-2",
            "metadata_fingerprint": "SU6I3Yoef9g=",
            "name": "sql-server-windows-be9e37d1",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-02-04bd758986c7/global/networks/private-vpc",
                "network_ip": "10.2.2.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-02-04bd758986c7/regions/us-central1/subnetworks/private-subnet-1",
                "subnetwork_project": "qwiklabs-gcp-02-04bd758986c7"
              }
            ],
            "project": "qwiklabs-gcp-02-04bd758986c7",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-02-04bd758986c7/zones/us-central1-c/instances/sql-server-windows-be9e37d1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-rdp",
              "allow-sql"
            ],
            "tags_fingerprint": "pIbn4OuzIrY=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-central1-c"
          },
          "dependencies": [
            "google_compute_network.private-vpc",
            "google_compute_subnetwork.private-subnet_1",
            "random_id.instance_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "test-server-linux",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20241009",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-02-04bd758986c7/zones/us-central1-c/disks/public-test-server-linux-be9e37d1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/qwiklabs-gcp-02-04bd758986c7/zones/us-central1-c/instances/public-test-server-linux-be9e37d1",
            "instance_id": "1497294498070569644",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "8sVlja6gEqc=",
            "metadata_startup_script": "sudo apt-get update;",
            "name": "public-test-server-linux-be9e37d1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.68.26.1",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-02-04bd758986c7/global/networks/public-vpc",
                "network_ip": "10.1.1.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-02-04bd758986c7/regions/us-central1/subnetworks/public-subnet-1",
                "subnetwork_project": "qwiklabs-gcp-02-04bd758986c7"
              }
            ],
            "project": "qwiklabs-gcp-02-04bd758986c7",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-02-04bd758986c7/zones/us-central1-c/instances/public-test-server-linux-be9e37d1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-ssh"
            ],
            "tags_fingerprint": "SFX9LNAOdG8=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-central1-c"
          },
          "dependencies": [
            "google_compute_network.public-vpc",
            "google_compute_subnetwork.public-subnet_1",
            "random_id.instance_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "windows-admin",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/windows-cloud/global/images/windows-server-2016-dc-v20200424",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 50,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-02-04bd758986c7/zones/us-central1-c/disks/windows-admin-be9e37d1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/qwiklabs-gcp-02-04bd758986c7/zones/us-central1-c/instances/windows-admin-be9e37d1",
            "instance_id": "8441513543410688684",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-standard-2",
            "metadata_fingerprint": "SU6I3Yoef9g=",
            "name": "windows-admin-be9e37d1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.188.127.79",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-02-04bd758986c7/global/networks/public-vpc",
                "network_ip": "10.1.1.4",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-02-04bd758986c7/regions/us-central1/subnetworks/public-subnet-1",
                "subnetwork_project": "qwiklabs-gcp-02-04bd758986c7"
              }
            ],
            "project": "qwiklabs-gcp-02-04bd758986c7",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-02-04bd758986c7/zones/us-central1-c/instances/windows-admin-be9e37d1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-rdp"
            ],
            "tags_fingerprint": "NrBVXn9x9_Q=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-central1-c"
          },
          "dependencies": [
            "google_compute_network.public-vpc",
            "google_compute_subnetwork.public-subnet_1",
            "random_id.instance_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "private-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/qwiklabs-gcp-02-04bd758986c7/global/networks/private-vpc",
            "mtu": 0,
            "name": "private-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "5495563511937671921",
            "project": "qwiklabs-gcp-02-04bd758986c7",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-02-04bd758986c7/global/networks/private-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "public-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/qwiklabs-gcp-02-04bd758986c7/global/networks/public-vpc",
            "mtu": 0,
            "name": "public-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "938403726830641905",
            "project": "qwiklabs-gcp-02-04bd758986c7",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-02-04bd758986c7/global/networks/public-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "private-subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-10-11T05:38:03.333-07:00",
            "gateway_address": "10.2.2.1",
            "id": "projects/qwiklabs-gcp-02-04bd758986c7/regions/us-central1/subnetworks/private-subnet-1",
            "ip_cidr_range": "10.2.2.0/24",
            "name": "private-subnet-1",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-02-04bd758986c7/global/networks/private-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "qwiklabs-gcp-02-04bd758986c7",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-02-04bd758986c7/regions/us-central1/subnetworks/private-subnet-1",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.private-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "public-subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-10-11T05:38:03.063-07:00",
            "gateway_address": "10.1.1.1",
            "id": "projects/qwiklabs-gcp-02-04bd758986c7/regions/us-central1/subnetworks/public-subnet-1",
            "ip_cidr_range": "10.1.1.0/24",
            "name": "public-subnet-1",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-02-04bd758986c7/global/networks/public-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "qwiklabs-gcp-02-04bd758986c7",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-02-04bd758986c7/regions/us-central1/subnetworks/public-subnet-1",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.public-vpc"
          ]
        }
      ]
    }
  ]
}